updated header :tophat::sparkles::nail_care:

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>time parents</title>
 </head>
 <body>
-   <h1>I don't hace to get parenting right, I can redo it!</h1> 
+   <h1>Take my parenting advice</h1> 
+
+   <h2>Wooooooooo!!! I love being a parent!</h2>
 </body>
 </html>
