Adding styles :tophat::mouse::ant:

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>time parents</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
    <h1>Take my parenting advice</h1> 
@@ -13,7 +14,7 @@
 
    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, deleniti, nostrum dolores id soluta eum nisi officia deserunt harum similique dignissimos sed maxime. Ducimus optio odit dolor! Eos inventore doloribus laudantium at officia modi sunt vero vel, libero laborum adipisci.</p>
 
-   
+
    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, deleniti, nostrum dolores id soluta eum nisi officia deserunt harum similique dignissimos sed maxime. Ducimus optio odit dolor! Eos inventore doloribus laudantium at officia modi sunt vero vel, libero laborum adipisci.</p>
 </body>
 </html>
