--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>time parents</title>
-    <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
-   <h1>Take my parenting advice</h1> 
+    <h1>Take my parenting advice</h1>
 
-   <h2>Wooooooooo!!! I love being a parent!</h2>
+    <h2>Wooooooooo!!! I love being a parent!</h2>
 
-   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, deleniti, nostrum dolores id soluta eum nisi officia deserunt harum similique dignissimos sed maxime. Ducimus optio odit dolor! Eos inventore doloribus laudantium at officia modi sunt vero vel, libero laborum adipisci.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, deleniti, nostrum dolores id soluta eum
+        nisi officia deserunt harum similique dignissimos sed maxime. Ducimus optio odit dolor! Eos inventore doloribus
+        laudantium at officia modi sunt vero vel, libero laborum adipisci.</p>
 
-   <h3>Get Money Baby!!!</h3>
 
-
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, deleniti, nostrum dolores id soluta eum nisi officia deserunt harum similique dignissimos sed maxime. Ducimus optio odit dolor! Eos inventore doloribus laudantium at officia modi sunt vero vel, libero laborum adipisci.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem, deleniti, nostrum dolores id soluta eum
+        nisi officia deserunt harum similique dignissimos sed maxime. Ducimus optio odit dolor! Eos inventore doloribus
+        laudantium at officia modi sunt vero vel, libero laborum adipisci.</p>
 </body>
+
 </html>
